# otus_ai_for_devs

./: README.md
hw02/: CHANGES.md  PROJECT_SUMMARY.md  PROMPTS.md  QUICKSTART.md  README.md  SECURITY.md  VERIFICATION_REPORT.md  start.py  start.sh  task.md  test_api.py  test_api.sh
hw02/backend/: app.py  pyproject.toml
hw02/docs/: ARCHITECTURE.md  BACKEND_GUIDE.md  FRONTEND_GUIDE.md  PRACTICE.md  README.md
hw02/frontend/: answers.html  answers.js  index.html  script.js
hw06/: .clineignore  CHANGES.md  PROMPTS.md  README.md  review_example.md  task.md
hw06/.clinerules/: update_prompts.md
hw06/docs/: review_report.md
hw06/memory-bank/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
hw10/: .clineignore  CHANGES.md  PROMPTS.md  README.md  task2.md
hw10/.clinerules/: coding-style.md  project-guide.md
hw10/docs/: architecture-overview.md  rc_signals_analysis.md  rc_signals_flow.md  unresolved-issues-report.md
hw10/docs/ai/: DEFINITION_OF_DONE.md  PLAN.md  TASKS.md  task2-debounce-plan.md  task3-blackbox-refactor-plan.md  task4-unit-tests-plan.md
hw10/docs/hw10/: prompts.md  (+4 more)
hw10/memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md
hw12/: .env.example  .gitignore  CHANGES.md  PROMPTS.md  README.md  agent-prompts.md  config.py  main.py  plan.md  pytest.ini  report.md  requirements.txt  task.md
hw12/.clinerules/: coding-standards.md  decision-log.md  update_prompts.md
hw12/agent/: agent.py  prompts.py
hw12/memory-bank/: activeContext.md  api.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  testing.md
hw12/tests/: conftest.py  test_config.py  test_e2e.py  test_kitsu_tools.py  test_session_store.py
hw12/tools/: kitsu_tools.py
hw12/web/: app.py  routes.py  session_store.py
hw14/: .env.example  .gitignore  CHANGES.md  Makefile  PLAN.md  PROMPTS.md  README.md  mcp_requirements.md  pyproject.toml  run.sh  task.md
hw14/.clinerules/: update_prompts.md
hw14/config/: chip_map.json
hw14/docs/: ARCHITECTURE.md  CONTRACT.md  INTEGRATION_LOGS.md  SETUP.md  continue.json.example  opencode.json.example
hw14/docs/modules/config/: README.md  config.md  main.md
hw14/docs/modules/indexer/: README.md  chip_map.md  schema.md  sdk_indexer.md
hw14/docs/modules/models/: README.md  schemas.md
hw14/docs/modules/search/: README.md  api_parser.md  cint_parser.md  macro_parser.md  rg_search.md
hw14/docs/modules/security/: README.md  path_guard.md
hw14/docs/modules/server/: README.md  logger.md  mcp_server.md
hw14/docs/modules/tools/: README.md  find_api_examples.md  find_bcm_api.md  find_cint_scripts.md  get_chip_info.md  get_sdk_info.md  ping.md  trace_implementation.md
hw14/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
hw14/src/: __main__.py  config.py
hw14/src/indexer/: chip_map.py  schema.sql  sdk_indexer.py
hw14/src/models/: schemas.py
hw14/src/search/: api_parser.py  cint_parser.py  macro_parser.py  rg_search.py
hw14/src/security/: path_guard.py
hw14/src/server/: logger.py  mcp_server.py
hw14/src/tools/: find_api_examples.py  find_bcm_api.py  find_cint_scripts.py  get_chip_info.py  get_sdk_info.py  ping.py  trace_implementation.py
hw14/tests/: test_cint_parser.py  test_e2e.py  test_macro_parser.py  test_security.py
hw14/tests/fixtures/sdk/include/bcm/: l2.h  l3.h  vlan.h
hw14/tests/fixtures/sdk/include/soc/: devids.h
hw14/tests/fixtures/sdk/src/bcm/esw/: l2.c  l3.c
hw14/tests/fixtures/sdk/src/bcm/esw/tomahawk4/: l2.c
hw14/tests/fixtures/sdk/src/examples/l3/: route_basic.bcm  route_basic.c
hw14/tests/fixtures/sdk/src/examples/vlan/: vlan_create.c
(+5 files in other folders)
