[project]
name = "mini-questionnaire"
version = "1.0.0"
description = "Мини-анкета - простое full-stack приложение с опросником"
requires-python = ">=3.8.1"
license = {text = "MIT"}
authors = [
    {name = "Student", email = "student@example.com"}
]
keywords = ["flask", "questionnaire", "survey", "fullstack", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Flask==2.3.3",
    "flask-cors==4.0.0",
    "requests==2.31.0",
    "flasgger==0.9.7.1",
    "flask-limiter==3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.12.1",
    "flake8==7.0.0",
]

[project.urls]
Homepage = "https://github.com/student/mini-questionnaire"
Repository = "https://github.com/student/mini-questionnaire.git"
Issues = "https://github.com/student/mini-questionnaire/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "black==23.12.1",
    "flake8==7.0.0",
]
